@@ -64,3 +64,4 @@ obj/
 
 Zenith
 *.zip
+zenith-optimization-plan.md
